--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <header>
         <div class="container">
           <ul>
-            <li><a href="#">Научные открытия</a></li>
-            <li><a href="#">Марс</a></li>
-            <li><a href="#">Биткоин</a></li>
-            <li><a href="#">Предзаказ</a></li>
+            <li><a href="index.html#discoveries">Научные открытия</a></li>
+            <li><a href="index.html#mars">Марс</a></li>
+            <li><a href="index.html#bitcoin">Биткоин</a></li>
+            <li><a href="index.html#order">Предзаказ</a></li>
           </ul>
         </div>
       </header>
@@ -43,7 +43,7 @@
             </div>
           </div>
         </section>
-        <section class="scientific-discoveries">
+        <section class="scientific-discoveries" id="discoveries">
           <div class="container">
             <div class="scientific-discoveries__inner">
               <div class="scientific-discoveries__item">
@@ -74,7 +74,7 @@
             </div>
           </div>
         </section>
-        <section class="mars">
+        <section class="mars" id="mars">
           <div class="mars__container">
             <div class="mars__tour"></div>
             <div class="mars__inner">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </section>
-        <section class="bitcoin">
+        <section class="bitcoin" id="bitcoin"> 
           <div class="bitcoin__inner">
             <h1>Почему Биткоин?</h1>
             <p>
@@ -137,7 +137,7 @@
             <div class="qr-code">
               <img src="#" alt="" />
             </div>
-            <div>
+            <div id="order">
               <h1>Оформляйте предзаказ!</h1>
               <p>
                 Стоимость книги $100, предзаказ можно оформить за $50
