--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <h1>Оформляйте предзаказ!</h1>
               <p>
                 Стоимость книги $100, предзаказ можно оформить за $50
-                <br />Оплата только криптовалюто
+                <br />Оплата только криптовалютой
               </p>
             </div>
           </div>
