--- a/index.html
+++ b/index.html
@@ -59,18 +59,17 @@
                 <p>Бессмертие</p>
               </div>
             </div>
-
-            <div class="scientific-discoveries__proven">
-              <div class="scientific-discoveries__proven-inner">
-                <p class="proven-info">
-                  Все доказано наукой.<br />
-                  Создание этих технологий - вопрос времени.<br />
-                  Как дожить?<br />
-                  Взломать само время!<br />
-                </p>
-                <div class="img"></div>
-                <img class="poin" src="images/poin_t2.png" alt="" />
-              </div>
+          </div>
+          <div class="scientific-discoveries__proven">
+            <div class="scientific-discoveries__proven-inner">
+              <p class="proven-info">
+                Все доказано наукой.<br />
+                Создание этих технологий - вопрос времени.<br />
+                Как дожить?<br />
+                Взломать само время!<br />
+              </p>
+              <div class="img"></div>
+              <img class="poin" src="images/poin_t2.png" alt="" />
             </div>
           </div>
         </section>
@@ -122,7 +121,7 @@
             <p>
               Вам понравилось?<br />
               Хотите узнать сколько мест у Илона Маска? <br />
-              Сколько биткойнов будет стоить билет? <br />Какие приключения
+              Сколько биткоинов будет стоить билет? <br />Какие приключения
               ожидают гениального человека из прошлого в мире технологической
               сингулярности будущего? <br />Робинзонада Илона Маска в Мире
               Будущего!
