--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                   А вы - нет!
                 </p>
                 <div class="order">Только по предзаказу 50$</div>
-                <!-- <a class="btn" type="submit">Оформить предзаказ</a> -->
               </div>
               <div class="ilon__image"></div>
             </div>
@@ -130,9 +129,9 @@
                 </p>
               </div>
 
-              <iframe
+              <!-- <iframe
                 src="https://cdn.forms-content.sg-form.com/935ea690-8868-11eb-8138-c6a1e0b713c5"
-              ></iframe>
+              ></iframe> -->
             </div>
           </div>
         </section>
@@ -147,14 +146,21 @@
                   Стоимость книги $100, предзаказ можно оформить за $50
                   <br />Оплата только криптовалютой
                 </p>
-              </div>
-              <div class="qr-code">
-                <img src="#" alt="" />
-              </div>
+              </div>             
+              <a class="btn" href="#popup">Оформить предзаказ</a>
+            </div>
+            <div class="qr-code">
+              <img src="#" alt="" />
             </div>
           </div>
         </div>
       </footer>
+      <div id="popup"> 
+         <iframe  src="https://cdn.forms-content.sg-form.com/935ea690-8868-11eb-8138-c6a1e0b713c5"></iframe>
+        <a class="close" href="#">X</a>
+
+      </div>
+  
     </div>
   </body>
 </html>
