add adaptive and QR-code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <div class="wrapper">
       <header>
         <div class="container">
-          <ul>
+          <div class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul class="menu-list">
             <li><a href="index.html#discoveries">Научные открытия</a></li>
             <li><a href="index.html#mars">Марс</a></li>
             <li><a href="index.html#bitcoin">Биткоин</a></li>
@@ -146,21 +151,23 @@
                   Стоимость книги $100, предзаказ можно оформить за $50
                   <br />Оплата только криптовалютой
                 </p>
-              </div>             
+              </div>
               <a class="btn" href="#popup">Оформить предзаказ</a>
             </div>
             <div class="qr-code">
-              <img src="#" alt="" />
+              <img src="images/qr.png" alt="" />
             </div>
           </div>
         </div>
       </footer>
-      <div id="popup"> 
-         <iframe  src="https://cdn.forms-content.sg-form.com/935ea690-8868-11eb-8138-c6a1e0b713c5"></iframe>
-        <a class="close" href="#">X</a>
-
+      <div id="popup">
+        <iframe
+          src="https://cdn.forms-content.sg-form.com/935ea690-8868-11eb-8138-c6a1e0b713c5"
+        ></iframe>
+        <a class="close" href="index.html">X</a>
       </div>
-  
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
