--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <header>
         <div class="container">
           <div class="menu-btn">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="move-down"></span>
+            <span class="disappear"></span>
+            <span class="move-up"></span>
           </div>
           <ul class="menu-list">
             <li><a href="index.html#discoveries">Научные открытия</a></li>
